--- a/css/main.css
+++ b/css/main.css
@@ -103,7 +103,7 @@ p {
     position: fixed;
     background-size: contain;
     background-repeat: no-repeat;
-    background-image: url(../img/%E3%85%88%E3%85%88%EC%9E%90%EC%82%B0%202%E3%85%8E%E3%85%8E%E3%85%8E.png);
+    background-image: url(../img/logo.png);
     z-index: 1;
     margin-top: 35px;
     margin-left: 35px;
