--- a/css/About.css
+++ b/css/About.css
@@ -60,28 +60,14 @@ body {
     border: 2px solid white;
 }
 
-
-
-
 .img {
     width: 300px;
     filter: blur(3px);
 }
 
-
-
-
-
-
-.2 {
-
-}
-
-
-
 .pic {
     width: 300px;
-    height: 400px;
+    height: 500px;
     background-size: cover;
     filter: blur(3px);
 }
@@ -91,6 +77,8 @@ body {
     height: 110px;
     color: white;
     padding: 10px;
+    position: relative;
+    bottom: 90px;
 }
 
 #Aboutpict1 {
