--- a/css/About.css
+++ b/css/About.css
@@ -77,6 +77,7 @@ body {
     height: 110px;
     color: white;
     padding: 10px;
+    padding-left: 15px;
     position: relative;
     bottom: 90px;
 }
