--- a/css/Program.css
+++ b/css/Program.css
@@ -21,25 +21,6 @@
     margin-top: 5vh;
 }
 
-#Program1 {
-    margin-top: 5vh;
-}
-
-#Program2 {
-    background-color: red;
-    color: black;
-}
-
-#Program3 {
-    background-color: yellow;
-    color: black;
-}
-
-#Program4 {
-    background-color: green;
-    color: white;
-}
-
 .program0 {
     width: 100%;
     height: 25vh;
@@ -62,34 +43,6 @@
     height: 25vh;
 }
 
-.B {
-    width: 120px;
-    height: 120px;
-    border: 3px solid white;
-    border-radius: 50%;
-    font-size: 500%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: 1s;
-}
-
-.B:hover {
-    transform:scale(1.2);
-}
-
-#B1 {
-
-}
-
-#B2 {
-
-}
-
-#B3 {
-
-}
-
 .program2-1 {
     width: 100%;
     height: 37.5vh;
@@ -104,63 +57,85 @@
     background-color: greenyellow;
 }
 
-.item {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    border: 5px solid white;
-    background-size: 60px;
-    background-color: white;
-    background-position: center;
-    background-repeat: no-repeat;
+.program2-1 {
+    width: 100%;
+    height: 37.5vh;
+    display: flex;
+    justify-content: center;
+    justify-content: space-around;
+}
+#menu div {
+    position: relative;
+    display: inline-block;
 }
 
-#item1 {
-    background-image: url(../img/p1.jpg);
+span {
+    display: flex;
+    width: 8vw;
+    height: 8vw;
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+}
+.arrow_box {
+  display: none;
+  position: absolute;
+  width: 10vw;
+  padding: 8px;
+  left: 0;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;  
+  border-radius: 8px;
+  background: #333;
+  color: #fff;
+
 }
 
-#item2 {
-    background-image: url(../img/p2.jpg);
+.arrow_box:after {
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  width: 0;
+  height: 0;
+  margin-left: -10px;
+  border: solid transparent;
+  border-color: rgba(51, 51, 51, 0);
+  border-bottom-color: #333;
+  border-width: 10px;
+  pointer-events: none;
+  content: "  ";
 }
 
-#item3 {
-    background-image: url(../img/p3.jpg);
+span:hover + p.arrow_box {
+  display:block ;
 }
 
-#item4 {
-    background-image: url(../img/p4.jpg);
-}
 
-#item5 {
-    background-image: url(../img/p5.jpg);
-}
-
-#item6 {
-    background-image: url(../img/p6.jpg);
-}
-
-#item7 {
-    background-image: url(../img/p7.jpg);
-}
-
-#item8 {
-    background-image: url(../img/p8.jpg);
-}
-
-.itembox {
-    width: 85px;
-    height: 130px;
+.text {
+    margin: 0px;
+    font-size: 1.6vw;
     color: white;
+    margin-top: 20px;
+}
+
+
+.img {
+    width: 80%;
+    object-fit: cover;
+    overflow: hidden;
+    margin:0 auto;
+}
+
+.imgbox {
+    border: 3px solid white;
+    background-color: white;
+    width: 8vw;
+    height: 8vw;
+    border-radius: 50%;
     transition: 1s;
-
-}
-
-.itembox:hover {
-    transform: scale(1.2);
-}
-
-.name {
     text-align: center;
-    margin-top: 10px;
-    font-size: 20px;
+}
+
+.imgbox:hover {
+    transform: scale(1.2);
 }
