--- a/css/Contact.css
+++ b/css/Contact.css
@@ -10,13 +10,15 @@
 
 .Contact {
     border: 3px solid white;
-    width: 230px;
-    height: 100px;
+    width: 27vw;
+    height: 12vw;
     color: white;
-    font-size: 16px;
+    font-size: 2.2vw;
     font-family: 'Noto Sans KR', sans-serif;
     border-radius: 0px;
     background-color: rgba(225, 225, 225, 0.1);
 }
+
+
 
 
