--- a/css/Contact.css
+++ b/css/Contact.css
@@ -2,7 +2,7 @@
 #Contact {
     width: 100%;
     height: 100vh;
-    background-color: black;
+    background-color: #111420;
     display: flex;
     justify-content: center;
     align-items: center;
