--- a/css/About.css
+++ b/css/About.css
@@ -5,7 +5,7 @@ body {
 .AboutContainer {
     width: 100%;
     height: 100vh;
-    background-color: black;
+    background-color: #111420;
 }
 
 .Emty0 {
@@ -41,7 +41,6 @@ body {
 .AboutPict {
     width: 30vw;
     height: 30vw;
-
     transition: 1s;
     color: white;
 }
@@ -74,7 +73,7 @@ body {
 .text0 {
     position: relative;
     top: 5vw;
-    font-size: 2.7vw;
+    font-size: 2.5vw;
     font-weight: bold;
     margin: 0px;
     padding: 20px;
