--- a/css/Program.css
+++ b/css/Program.css
@@ -2,19 +2,7 @@
 #Program {
     width: 100%;
     height: 100vh;
-    background-color: black;
-}
-
-.Program {
-    border: 4px solid white;
-    border-radius: 50%;
-    width: 12vw;
-    height: 12vw;
-    color: white;
-    font-size: 80px;
-    text-align: center;
-    margin-bottom: 6vw;
-    margin-right: 4vw;
+    background-color: #111420;
 }
 
 .Program1 {
@@ -139,3 +127,8 @@ span:hover + p.arrow_box {
 .imgbox:hover {
     transform: scale(1.2);
 }
+.Program {
+    width: 100%;
+    height: 100vh;
+}
+
