--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@ body {
 
 .imglogo {
     width: 100px;
-    margin-bottom: 10vw;
+    margin-bottom: vw;
 }
 
 .page2 {
@@ -120,7 +120,7 @@ a {
 }
 
 .LeftText {
-    margin-top: 25px;
+    margin-top: 28px;
 }
 
 .center {
