--- a/css/Program.css
+++ b/css/Program.css
@@ -15,7 +15,7 @@
 }
 
 .program1 {
-    width: 20%;
+    width: 15%;
     height: 75vh;
     float: left;
 }
@@ -72,11 +72,11 @@ span {
   padding: 8px;
   left: 0;
   -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;  
+  -moz-border-radius: 8px;
   border-radius: 8px;
   background: #333;
   color: #fff;
-
+  font-size: 0.8vw;
 }
 
 .arrow_box:after {
@@ -132,3 +132,18 @@ span:hover + p.arrow_box {
     height: 100vh;
 }
 
+
+
+
+#arrow1 {
+    width: 7vw;
+}
+
+#arrow2 {
+    width: 7vw;
+}
+
+#arrow3 {
+    width: 11vw;
+    left: -20px;
+}
