--- a/css/About.css
+++ b/css/About.css
@@ -16,7 +16,7 @@ body {
 }
 
 .Emty1 {
-    width: 20%;
+    width: 15%;
     height: 75vh;
     float: left;
 }
@@ -51,17 +51,15 @@ body {
     border: 2px solid white;
 }
 
-.img {
-    width: 300px;
-    filter: blur(3px);
-}
+
 
 .pic {
-    width: 22vw;
-    height: 22vw;
-    background-size: contain;
+    width: 20vw;
+    height: 20vw;
+    background-size: cover;
     transition: 1s;
     cursor: pointer;
+    padding: 2vw;
 }
 
 .pic:hover {
@@ -69,13 +67,7 @@ body {
 }
 
 
-.text0 {
-    position: relative;
-    font-size: 2vw;
-    font-weight: bold;
-    margin: 0px;
-    padding: 2vw;
-}
+
 
 #Aboutpict1 {
     background-image: url(../img/g4about.jpg.jpeg);
@@ -90,3 +82,10 @@ body {
 }
 
 
+
+
+
+.text1 {
+    font-size: 2.3vw;
+    margin: 0px;
+}
