--- a/css/Goods.css
+++ b/css/Goods.css
@@ -9,13 +9,14 @@
 }
 
 .GoodsReady {
-    width: 60%;
-    height: 50%;
-    color: white;
-    font-size: 5vw;
+    width: 20vw;
+    height: 6.5vw;
+    color: black;
+    font-size: 2vw;
     text-align: center;
+    border: 1px solid #D9D9D9;
+    background-color: #D9D9D9;
+    border-radius: 20px;
 }
 
-#GoodsReady1 {
-    margin-top: 17%;
-}
+
