--- a/css/Program.css
+++ b/css/Program.css
@@ -5,10 +5,6 @@
     background-color: #111420;
 }
 
-.Program1 {
-    margin-top: 5vh;
-}
-
 .program0 {
     width: 100%;
     height: 25vh;
@@ -39,12 +35,9 @@
     justify-content: space-around;
 }
 
-
-
-
 span {
-    width: 8vw;
-    height: 8vw;
+    width: 10vw;
+    height: 10vw;
     cursor: pointer;
     display: flex;
     justify-content: center;
@@ -93,7 +86,7 @@ span:hover + p.arrow_box {
 
 
 .img {
-    width: 80%;
+    width: 6vw;
     object-fit: cover;
     overflow: hidden;
     margin:0 auto;
@@ -103,8 +96,8 @@ span:hover + p.arrow_box {
 .imgbox {
     border: 3px solid #D9D9D9;
     background-color: #D9D9D9;
-    width: 8vw;
-    height: 8vw;
+    width: 10vw;
+    height: 10vw;
     border-radius: 50%;
     transition: 1s;
 }
@@ -152,7 +145,15 @@ span:hover + p.arrow_box {
 }
 
 .text0 {
-    width: 8vw;
+    width: 10vw;
     height: 2vw;
     text-align: center;
+}
+
+#img1 {
+    width: 8vw;
+}
+
+#text0 {
+    margin-top: 2vw;
 }
