--- a/css/Program.css
+++ b/css/Program.css
@@ -47,7 +47,7 @@ span {
   display: none;
   position: absolute;
   width: 10vw;
-  padding: 8px;
+  padding: 0.5vw;
   left: 0;
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
